Corrigido erro de fonte e build final para deploy

--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+
 body {
-  @apply bg-azulEscuro text-cinzaClaro font-poppins;
+  @apply font-poppins bg-azulEscuro text-cinzaClaro;
 }
 
 /* ===== Fundo animado ===== */
